src/main/java/org/example/springv4/core/error/ex/Exception403.java
package org.example.springv4.core.error.ex;

// 인증관련
public class Exception403 extends RuntimeException {
    public Exception403(String message) {
        super(message);
    }
}
